--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -21,30 +21,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ow6-og-n0F">
-                                <rect key="frame" x="92" y="59" width="137" height="30"/>
-                                <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text goes here eh" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="45W-nS-8eh">
-                                        <rect key="frame" x="0.0" y="0.0" width="136.5" height="0.0"/>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lcB-RM-oen">
-                                        <rect key="frame" x="29" y="0.0" width="79" height="30"/>
-                                        <state key="normal" title="Press this?!"/>
-                                        <connections>
-                                            <action selector="pressButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fU7-7d-S5d"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="lcB-RM-oen" firstAttribute="centerY" secondItem="ow6-og-n0F" secondAttribute="centerY" id="RjW-eh-AP4"/>
-                                    <constraint firstItem="lcB-RM-oen" firstAttribute="centerX" secondItem="ow6-og-n0F" secondAttribute="centerX" id="dJj-CW-VA6"/>
-                                </constraints>
-                            </stackView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text goes here eh" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="45W-nS-8eh">
+                                <rect key="frame" x="92" y="92" width="136.5" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lcB-RM-oen">
+                                <rect key="frame" x="121" y="369" width="79" height="30"/>
+                                <state key="normal" title="Press this?!"/>
+                                <connections>
+                                    <action selector="pressButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fU7-7d-S5d"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="lcB-RM-oen" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="100" id="1uG-xb-hM4"/>
+                            <constraint firstItem="lcB-RM-oen" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6sY-5H-s5R"/>
+                            <constraint firstItem="45W-nS-8eh" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-100" id="EsY-UR-cyH"/>
+                            <constraint firstItem="45W-nS-8eh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="G1B-nk-Fvf"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="textBox" destination="45W-nS-8eh" id="p4X-vS-dSS"/>
@@ -53,6 +50,23 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="135" y="111.97183098591549"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="AIX-li-aIp">
+            <objects>
+                <viewController id="ATD-sS-GUJ" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="muR-2y-sXm"/>
+                        <viewControllerLayoutGuide type="bottom" id="NAt-Ru-dMv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="vaF-1G-U5G">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="l08-JI-SUT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
 </document>
