--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -21,39 +21,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text goes here eh" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="45W-nS-8eh">
-                                <rect key="frame" x="92" y="92" width="136.5" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lcB-RM-oen">
-                                <rect key="frame" x="121" y="249" width="79" height="30"/>
-                                <state key="normal" title="Press this?!"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3pC-fc-suE">
+                                <rect key="frame" x="146" y="68" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" red="1" green="0.42105863093871509" blue="0.33607041387922432" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
-                                    <action selector="pressButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fU7-7d-S5d"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lag-BU-WWc">
-                                <rect key="frame" x="121" y="309" width="79" height="30"/>
-                                <state key="normal" title="Next"/>
-                                <connections>
-                                    <segue destination="J6G-NL-1fG" kind="show" identifier="oneToTwo" id="vcL-qb-QpU"/>
+                                    <action selector="onNameClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1c3-DJ-qRk"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="0.76516761145029522" blue="0.99579522513748797" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" red="0.91683723220597324" green="0.67195248130996066" blue="1" alpha="0.85654159330985913" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="lcB-RM-oen" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-20" id="1uG-xb-hM4"/>
-                            <constraint firstItem="lcB-RM-oen" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6sY-5H-s5R"/>
-                            <constraint firstItem="lag-BU-WWc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EDO-rY-3iU"/>
-                            <constraint firstItem="45W-nS-8eh" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-100" id="EsY-UR-cyH"/>
-                            <constraint firstItem="45W-nS-8eh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="G1B-nk-Fvf"/>
-                            <constraint firstItem="lag-BU-WWc" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Vbs-2T-INj"/>
+                            <constraint firstItem="3pC-fc-suE" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="146" id="O0g-tI-4P1"/>
+                            <constraint firstItem="3pC-fc-suE" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="48" id="fF8-fA-Ter"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="textBox" destination="45W-nS-8eh" id="p4X-vS-dSS"/>
+                        <outlet property="contactNameButton" destination="3pC-fc-suE" id="GIn-Dm-s9x"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -72,36 +59,36 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text goes here eh" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rsh-i3-PVN">
-                                <rect key="frame" x="89" y="53" width="136.5" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aaq-p6-mkC">
+                                <rect key="frame" x="25" y="40" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QLB-Yq-Ezo">
-                                <rect key="frame" x="118" y="210" width="79" height="30"/>
-                                <state key="normal" title="Press this?!"/>
-                                <connections>
-                                    <action selector="pressButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ukl-iQ-RIb"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YXN-3e-LLj">
-                                <rect key="frame" x="121" y="300" width="79" height="30"/>
-                                <state key="normal" title="Back"/>
-                                <connections>
-                                    <segue destination="BYZ-38-t0r" kind="show" identifier="twoToOne" id="Vvz-iM-edl"/>
-                                </connections>
-                            </button>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O4H-Bn-fmx">
+                                <rect key="frame" x="25" y="69" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gAz-DZ-7yE">
+                                <rect key="frame" x="25" y="98" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YvZ-GY-GtG">
+                                <rect key="frame" x="25" y="127" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="rsh-i3-PVN" firstAttribute="centerY" secondItem="Mkc-yp-vP5" secondAttribute="centerY" constant="-100" id="Nvr-bU-d6q"/>
-                            <constraint firstItem="QLB-Yq-Ezo" firstAttribute="centerY" secondItem="Mkc-yp-vP5" secondAttribute="centerY" constant="-20" id="hnj-eC-nay"/>
-                            <constraint firstItem="rsh-i3-PVN" firstAttribute="centerX" secondItem="Mkc-yp-vP5" secondAttribute="centerX" id="jvw-YJ-mag"/>
-                            <constraint firstItem="QLB-Yq-Ezo" firstAttribute="centerX" secondItem="Mkc-yp-vP5" secondAttribute="centerX" id="ko9-Nh-0JH"/>
-                            <constraint firstItem="YXN-3e-LLj" firstAttribute="centerX" secondItem="Mkc-yp-vP5" secondAttribute="centerX" id="un2-6e-SQl"/>
-                            <constraint firstItem="YXN-3e-LLj" firstAttribute="centerY" secondItem="Mkc-yp-vP5" secondAttribute="centerY" constant="20" id="yeE-R1-Rg0"/>
-                        </constraints>
+                        <color key="backgroundColor" red="1" green="0.76516761150000001" blue="0.99579522509999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rKn-AR-8LG" userLabel="First Responder" sceneMemberID="firstResponder"/>
